# openspace-api-python

./: README.md  pyproject.toml
example/: example.py  notebook-examples.py  sync-example.py
openspace/: __init__.py
openspace/src/: api.py  socketwrapper.py  topic.py
openspace/src/example/: example.py  notebook-examples.py
src/: api.py
src/openspace/: __init__.py
src/openspace/src/: api.py  socketwrapper.py  topic.py
